--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -207,7 +207,7 @@
         </div>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="javascript/survey.js"></script>
+        <script type="text/javascript" src="javascript/frontend.js"></script>
 </body>
 
 </html>
