--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,6 +17,7 @@
     <div class="jumbotron text-center">
         <h1>Man's Best Friend Finder</h1>
         <p>Take the survey and we'll show you a greyt match!</p>
+        <br>
     </div>
     <!-- container that holds the survey form. -->
     <div class="container">
@@ -27,7 +28,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">I prefer to adopt a puppy.</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q1">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Absolutely not!</option>
                                 <option value="2">2 </option>
@@ -43,7 +44,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">I prefer to adopt a senior dog (older than 7 years old).</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q2">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Absolutely not!</option>
                                 <option value="2">2 </option>
@@ -59,7 +60,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What size dog do you prefer?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q3">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Small (&lt;20 lbs.)</option>
                                 <option value="2">2 </option>
@@ -75,7 +76,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What is your ideal daily level of activity with your dog?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q4">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Snuggle on the couch together.</option>
                                 <option value="2">2 </option>
@@ -91,7 +92,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What kind of home do you have?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q5">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Rent a small apartment with no yard.</option>
                                 <option value="2">2 </option>
@@ -107,7 +108,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What family situation best describes you?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q6">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Single, no children.</option>
                                 <option value="2">2 </option>
@@ -123,7 +124,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">Does dog hair bother you?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q7">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Yes, I hate it!</option>
                                 <option value="2">2 </option>
@@ -139,7 +140,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">Does drooling bother you?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q8">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - Yes, it grosses me out!</option>
                                 <option value="2">2 </option>
@@ -155,7 +156,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">How would you rate your ability to be firm and consistent with your dog:</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q9">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - I'm a pushover.</option>
                                 <option value="2">2 </option>
@@ -171,7 +172,7 @@
                         <li>
                             <label class="mr-sm-2" for="inlineFormCustomSelect">How much time are you willing to commit to training?</label>
                             <br>
-                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <select class="custom-select mr-sm-2" id="Q10">
                                 <option selected>Choose...</option>
                                 <option value="1">1 - None, I need a dog already trained.</option>
                                 <option value="2">2 </option>
@@ -190,6 +191,16 @@
             </div>
     </div>
     </form>
+    <!-- footer section. breadcrumb links -->
+    <footer class="footer">
+            <div class="container">
+                <p>
+                    <a href="/api/friends">API Friends Link</a> |
+                    <a href="home.html">Home</a> |
+                    <a href="https://github.com/natroberts19/FriendFinder">GitHub Repo</a>
+                </p>
+            </div>
+        </footer>
     </div>
 <!-- Modal Response -->
 <!-- This eventually will auto pop, using direct link. This is all hard coded right now.-->
