trying to get POST to work

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -29,12 +29,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">I prefer to adopt a puppy.</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q1">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Absolutely not!</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Whatever!</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Definitely!</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Absolutely not!</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Whatever!</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Definitely!</option>
                             </select>
                         </li>
                     </div>
@@ -45,12 +45,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">I prefer to adopt a senior dog (older than 7 years old).</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q2">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Absolutely not!</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Whatever!</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Definitely!</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Absolutely not!</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Whatever!</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Definitely!</option>
                             </select>
                         </li>
                     </div>
@@ -61,12 +61,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What size dog do you prefer?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q3">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Small (&lt;20 lbs.)</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Medium (about 35-40 lbs.)</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Very large (&gt;60 lbs.)</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Small (&lt;20 lbs.)</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Medium (about 35-40 lbs.)</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Very large (&gt;60 lbs.)</option>
                             </select>
                         </li>
                     </div>
@@ -77,12 +77,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What is your ideal daily level of activity with your dog?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q4">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Snuggle on the couch together.</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Take a leisurely stroll.</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Run 3 miles together.</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Snoozle on the couch together.</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Take a leisurely stroll.</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Run 3 miles together.</option>
                             </select>
                         </li>
                     </div>
@@ -93,12 +93,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What kind of home do you have?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q5">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Rent a small apartment with no yard.</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Rent medium with some outdoor space.
-                                    <option value="4">4 </option>
-                                    <option value="5">5 - Own a home with a large, fenced yard.</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Rent a small apartment with no yard.</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Rent medium with some outdoor space.
+                                <option value=4>4 </option>
+                                <option value=5>5 - Own a home with a large, fenced yard.</option>
                             </select>
                         </li>
                     </div>
@@ -109,12 +109,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">What family situation best describes you?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q6">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Single, no children.</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Married, young children.</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Retired couple.</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Single, no children.</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Married, young children.</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Retired couple.</option>
                             </select>
                         </li>
                     </div>
@@ -125,12 +125,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">Does dog hair bother you?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q7">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Yes, I hate it!</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Don't care! </option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Give me the shaggiest dog you have!</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Yes, I hate it!</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Don't care! </option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Give me the shaggiest dog you have!</option>
                             </select>
                         </li>
                     </div>
@@ -141,12 +141,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">Does drooling bother you?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q8">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - Yes, it grosses me out!</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Don't care!</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Give me Hooch!</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - Yes, it grosses me out!</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Don't care!</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Give me Hooch!</option>
                             </select>
                         </li>
                     </div>
@@ -157,12 +157,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">How would you rate your ability to be firm and consistent with your dog:</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q9">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - I'm a pushover.</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - I set realistic boundaries.</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - I'm very strict!</option>
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - I'm a pushover.</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - I set realistic boundaries.</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - I'm very strict!</option>
                             </select>
                         </li>
                     </div>
@@ -173,12 +173,12 @@
                             <label class="mr-sm-2" for="inlineFormCustomSelect">How much time are you willing to commit to training?</label>
                             <br>
                             <select class="custom-select mr-sm-2" id="Q10">
-                                <option selected>Choose...</option>
-                                <option value="1">1 - None, I need a dog already trained.</option>
-                                <option value="2">2 </option>
-                                <option value="3">3 - Whatever!</option>
-                                <option value="4">4 </option>
-                                <option value="5">5 - Plenty, I expect to and am willing to hire a trainer if necessary.
+                                <option selected value=0>Choose...</option>
+                                <option value=1>1 - None, I need a dog already trained.</option>
+                                <option value=2>2 </option>
+                                <option value=3>3 - Whatever!</option>
+                                <option value=4>4 </option>
+                                <option value=5>5 - Plenty, I expect to and am willing to hire a trainer if necessary.
                                 </option>
                             </select>
                         </li>
