added some more match logic, added jQuery to push modal.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -203,16 +203,17 @@
         </footer>
     </div>
 <!-- Modal Response -->
+<!-- Reference for my modal template: https://www.webdesignerdepot.com/2012/10/creating-a-modal-window-with-html5-and-css3/ -->
 <!-- This eventually will auto pop, using direct link. This is all hard coded right now.-->
-<a href="#openModal">Open Modal</a>
+<!-- <a href="#openModal">Open Modal</a> -->
         
         <div id="openModal" class="modalDialog">
                 <div>
                         <a href="#close" title="Close" class="close">X</a>
                         <div id="modal-text">
-                            <p>Peachy Keen is your perfect match!</p>
-                            <img src="images/grey1.jpg" id="modal-pic">
-                            <p>It really doesn't matter how you answered, a grey is always the best match!</p>
+                            <div id="match-name"></div>
+                            <div id="match-pic"></div>
+                            <div id="match-message"></div>
                         </div>
                     </div>
         </div>
