added option labels to survey

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -31,9 +31,9 @@
                             <select class="custom-select mr-sm-2" id="Q1">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Absolutely not!</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Not really...</option>
                                 <option value=3>3 - Whatever!</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Hmmm, maybe...</option>
                                 <option value=5>5 - Definitely!</option>
                             </select>
                         </li>
@@ -47,9 +47,9 @@
                             <select class="custom-select mr-sm-2" id="Q2">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Absolutely not!</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Not really...</option>
                                 <option value=3>3 - Whatever!</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Hmmm, maybe...</option>
                                 <option value=5>5 - Definitely!</option>
                             </select>
                         </li>
@@ -63,9 +63,9 @@
                             <select class="custom-select mr-sm-2" id="Q3">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Small (&lt;20 lbs.)</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Small to medium</option>
                                 <option value=3>3 - Medium (about 35-40 lbs.)</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Medium to large</option>
                                 <option value=5>5 - Very large (&gt;60 lbs.)</option>
                             </select>
                         </li>
@@ -79,9 +79,9 @@
                             <select class="custom-select mr-sm-2" id="Q4">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Snoozle on the couch together.</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Follow each other around the house all day.</option>
                                 <option value=3>3 - Take a leisurely stroll.</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Brisk walk.</option>
                                 <option value=5>5 - Run 3 miles together.</option>
                             </select>
                         </li>
@@ -94,11 +94,11 @@
                             <br>
                             <select class="custom-select mr-sm-2" id="Q5">
                                 <option selected value=0>Choose...</option>
-                                <option value=1>1 - Rent a small apartment with no yard.</option>
-                                <option value=2>2 </option>
-                                <option value=3>3 - Rent medium with some outdoor space.
-                                <option value=4>4 </option>
-                                <option value=5>5 - Own a home with a large, fenced yard.</option>
+                                <option value=1>1 - I live in my car.</option>
+                                <option value=2>2 - Rent a small apartment with no yard.</option>
+                                <option value=3>3 - Rent medium with some outdoor space.</option>
+                                <option value=4>4 - Home with an unfenced yard.</option>
+                                <option value=5>5 - Home with a large, fenced yard.</option>
                             </select>
                         </li>
                     </div>
@@ -111,9 +111,9 @@
                             <select class="custom-select mr-sm-2" id="Q6">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Single, no children.</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Married, no children.</option>
                                 <option value=3>3 - Married, young children.</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Married, older children.</option>
                                 <option value=5>5 - Retired couple.</option>
                             </select>
                         </li>
@@ -127,9 +127,9 @@
                             <select class="custom-select mr-sm-2" id="Q7">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Yes, I hate it!</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Not really...</option>
                                 <option value=3>3 - Don't care! </option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Hmmm, maybe...</option>
                                 <option value=5>5 - Give me the shaggiest dog you have!</option>
                             </select>
                         </li>
@@ -143,9 +143,9 @@
                             <select class="custom-select mr-sm-2" id="Q8">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - Yes, it grosses me out!</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Not really...</option>
                                 <option value=3>3 - Don't care!</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Hmmm, maybe...</option>
                                 <option value=5>5 - Give me Hooch!</option>
                             </select>
                         </li>
@@ -159,9 +159,9 @@
                             <select class="custom-select mr-sm-2" id="Q9">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - I'm a pushover.</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Hmmm, ok I guess.</option>
                                 <option value=3>3 - I set realistic boundaries.</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Pretty good.</option>
                                 <option value=5>5 - I'm very strict!</option>
                             </select>
                         </li>
@@ -175,9 +175,9 @@
                             <select class="custom-select mr-sm-2" id="Q10">
                                 <option selected value=0>Choose...</option>
                                 <option value=1>1 - None, I need a dog already trained.</option>
-                                <option value=2>2 </option>
+                                <option value=2>2 - Maybe a little. </option>
                                 <option value=3>3 - Whatever!</option>
-                                <option value=4>4 </option>
+                                <option value=4>4 - Some time.</option>
                                 <option value=5>5 - Plenty, I expect to and am willing to hire a trainer if necessary.
                                 </option>
                             </select>
@@ -204,7 +204,7 @@
     </div>
 <!-- Modal Response -->
 <!-- Reference for my modal template: https://www.webdesignerdepot.com/2012/10/creating-a-modal-window-with-html5-and-css3/ -->
-<!-- This eventually will auto pop, using direct link. This is all hard coded right now.-->
+<!-- This eventually will auto pop.-->
 <!-- <a href="#openModal">Open Modal</a> -->
         
         <div id="openModal" class="modalDialog">
