--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -219,6 +219,7 @@
         </div>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="javascript/frontend.js"></script>
 </body>
 
